- fixes minor display bug which made navigation-toggle button jump on   mobile

--- a/dll/static/src/scss/navigation.scss
+++ b/dll/static/src/scss/navigation.scss
@@ -7,7 +7,8 @@
   margin-right: 32px;
   margin-left: 30px;
   padding-top: 6px;
-  vertical-align: middle;
+  margin-top: 27px;
+  vertical-align: top;
   position: relative;
   line-height: 0;
   z-index: 1;
